--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "version": "0.1.0",
     "main": "./index.js",
     "dependencies": {
-        "breach_module": "0.3.x"
+        "breach_module": "0.3.x",
+        "async": "0.9.x",
+        "express": "4.5.x",
+        "body-parser": "1.4.x",
+        "method-override": "2.1.x",
+        "request": "2.36.x"
     }
 }
